--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,6 @@
             "email": "s3a632081@student.ncut.edu.tw"
         }
     ],
-    "require": {}
+    "require": {"nesbot/carbon": "^1.21"
+    }
 }
